--- a/client/src/componentes/SearchBar/search.css
+++ b/client/src/componentes/SearchBar/search.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
     border: none;
-    
+    margin-right: 60px;
 }
 
 .link{
