--- a/client/src/componentes/Cards/cards.css
+++ b/client/src/componentes/Cards/cards.css
@@ -16,5 +16,6 @@
 }
 .link__card{
     text-decoration: none;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
 }
