--- a/client/src/componentes/Detalle/detalle.css
+++ b/client/src/componentes/Detalle/detalle.css
@@ -9,8 +9,9 @@
 
 }
 .detalle{
-    
-    font-family: "Roboto", sans-serif;
+    margin-top: 30px;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 700;
     display: flex;
     align-content: space-between;
     flex-flow: column;
@@ -18,15 +19,22 @@
     background-color: white;
     border-radius: 10px;
     width: 800px;
-    box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
     padding-bottom: 30px;
     padding-top: 20px;
-    
     height: auto;
-
+    margin-bottom: 30px;
+    box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
 }
 .div__act{
-    width: 500px;
-    height: 200px;
-    border: 1px solid green;
+    width: auto;
+    height: auto;
+    border: 2px solid green;
+    display: grid;
+    justify-content: space-between;
+    grid-column: 2/2;
+    grid-row: 2/2;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    border-radius: 15px;
+    box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
 }
