--- a/client/src/componentes/Footer/footer.css
+++ b/client/src/componentes/Footer/footer.css
@@ -26,7 +26,8 @@
     font-weight: 700;
     letter-spacing: 2px;
     color: white;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    
     margin-bottom: 0;
     
 }
