--- a/client/src/componentes/Form/form.css
+++ b/client/src/componentes/Form/form.css
@@ -22,13 +22,14 @@
     align-items: center;
     margin: 0 auto;
     justify-content: space-between;
-    border: 1px solid green;
-    width: 500px;
-    height: 500px;
+    border: 2px solid green;
+    width: 800px;
+    height: auto;
     padding-top: 30px;
     padding-bottom: 40px;
     border-radius: 10px;
     box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
+    align-content: space-between;
 
 }
 .boton__creacion{
@@ -45,26 +46,109 @@
     box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
 }
 .creacion{
-    font-family: "Roboto", sans-serif;
+    font-family: 'Oswald', sans-serif;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: 700;
 }
 .nombre{
-    font-family: "Roboto", sans-serif;  
+    font-family: 'Oswald', sans-serif; 
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: bold;
 }
+
 .dificultad{
-    font-family: "Roboto", sans-serif;
+    font-family: 'Oswald', sans-serif;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: bold;
 }
 .temporada{
-    font-family: "Roboto", sans-serif;
+    font-family: 'Oswald', sans-serif;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: bold;
 }
 .duracion{
-    font-family: "Roboto", sans-serif;
+    font-family: 'Oswald', sans-serif;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: bold;
 }
 .pais{
-    font-family: "Roboto", sans-serif;
+    font-family: 'Oswald', sans-serif;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-weight: bold;
 }
 .danger{
     color: red;
 }
 .deshabilitado{
     display: none;
+}
+.pais__seleccionado{
+    border: 1px solid rgb(255, 255, 255);
+    width: auto;
+    height: auto;
+    border-radius: 15px;
+    background-color:rgb(0 128 55) ;
+    color: white;
+    font-family: 'Oswald', sans-serif;;
+    font-weight: 700;
+    margin-bottom: 15px;
+    box-shadow: 3px 3px 20px rgba(10, 1, 1, 0.637);
+}
+.caja__paises{
+    border: 2px solid rgb(0 128 55);
+    width: 400px;
+    display:grid;
+    border-radius: 15px;
+    background-color: rgba(181, 187, 185, 0.716);
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.boton_delete{
+    float: right;
+    
+    border: none;
+    color:red;
+    box-shadow: 3px 3px 20px rgba(255, 6, 6, 0.637);
+    border-radius: 3px;
+    cursor: pointer;
+    
+    
+    padding:1px 3px;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+.p_nombre{
+margin-left: 5px;
+}
+.input__name{
+    border: 2px solid green;
+    border-radius: 5px;
+}
+.input__name__error{
+    border: 2px solid red;
+    border-radius: 5px;
+}
+.uno{
+    color: blue;
+
+}
+.dos{
+    color:yellow
+}
+.tres{
+    color: green;
+}
+.cuatro{
+    color: orange;
+
+}
+.cinco{
+    color: red;
 }
