--- a/client/src/componentes/Detalle/detalle.css
+++ b/client/src/componentes/Detalle/detalle.css
@@ -30,11 +30,9 @@
     height: auto;
     border: 2px solid green;
     display: grid;
+    
     justify-content: space-between;
-    grid-column: 2/2;
-    grid-row: 2/2;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
+    grid-template-columns: auto auto;
     border-radius: 15px;
     box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
 }
