--- a/client/src/componentes/Form/form.css
+++ b/client/src/componentes/Form/form.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items:center;
    
+   background-image: url('../../img/map-117174.png');
 }
 .contenedor__form{
     display: flex;
@@ -30,7 +31,7 @@
     border-radius: 10px;
     box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
     align-content: space-between;
-
+    background-color: white;
 }
 .boton__creacion{
     border-radius: 15px;
