--- a/client/src/componentes/Filtrado/filtroo.css
+++ b/client/src/componentes/Filtrado/filtroo.css
@@ -50,6 +50,7 @@
     justify-content: left;
     align-items: left;
     align-content: space-between;
+    margin-left: 10px;
 
 }
 .boton__act{
@@ -95,4 +96,9 @@
     border-radius: 3px;
     font-family: 'Oswald', sans-serif;
     font-weight: 700;
+}
+.check{
+    border: none;
+    box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
+     
 }
