--- a/client/src/componentes/Detalle/detalle.css
+++ b/client/src/componentes/Detalle/detalle.css
@@ -24,6 +24,7 @@
     height: auto;
     margin-bottom: 30px;
     box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
+    
 }
 .div__act{
     width: auto;
@@ -35,4 +36,13 @@
     grid-template-columns: auto auto;
     border-radius: 15px;
     box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
+}
+.imagen__detalle{
+    box-shadow: 3px 3px 20px rgba(0, 0, 0, .5);
+    border-radius: 15px;
+}
+.codigo{
+    font-family: 'Oswald', sans-serif;
+    font-size: 50px;
+    font-weight: bold;
 }
